--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -125,7 +125,7 @@
     <h2 class='title'>ピックアップカテゴリー</h2>
     <%= link_to '新規投稿商品', new_item_path, class: "subtitle" %>
     <ul class='item-lists'>
-
+      <% if @items.exists? %>
       <% @items.each do |item| %>
       <li class='list'>
         <%= link_to "#" do %>
@@ -156,7 +156,7 @@
       </li>
 
       <%# 商品がない場合のダミー %>
-      <% if @items.empty? %>
+      <% else %>
       <li class='list'>
         <%= link_to '#' do %>
         <%= image_tag "furima-intro04.png", class: "item-img" %>
