--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -16,10 +16,10 @@
     </div>
     <div class="item-price-box">
       <span class="item-price">
-        ¥ 999,999,999
+         <%= "¥#{@item.price.to_s(:delimited, delimiter: ',')}" %>
       </span>
       <span class="item-postage">
-        <%= '配送料負担' %>
+         <%= @item.shipping_charge.name %>
       </span>
     </div>
 
